better hamburger and fixed z-index on chrome

--- a/assets/css/_sass/_hamburger.scss
+++ b/assets/css/_sass/_hamburger.scss
@@ -1,5 +1,5 @@
 .hamburger {
-  font-size: 20px;
+  font-size: 38px;
 
   display: inline-block;
 
@@ -19,11 +19,11 @@
   }
 
   &.hamburger-cancel.active:before {
-    transform: translateY(.4em) rotate(135deg);
+    transform: translateY(13px) rotate(135deg);
   }
 
   &.hamburger-cancel.active:after {
-    transform: translateY(-.4em) rotate(-135deg);
+    transform: translateY(-13px) rotate(-135deg);
   }
 }
 
@@ -46,8 +46,8 @@
 .hamburger:after {
   display: block;
   width: 100%;
-  height: .2em;
-  margin: 0 0 .2em;
+  height: 5px;
+  margin: 0 0 8px;
   transition:
     transform .2s ease-in-out,
     background .2s ease-in-out;
