--- a/assets/css/_sass/_header.scss
+++ b/assets/css/_sass/_header.scss
@@ -71,7 +71,7 @@
 
 #nav-toggle {
   position: relative;
-  bottom: 8px;
+  bottom: 15px;
   right: 10px;
   z-index: 20;
   float: right;
