--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -2,6 +2,7 @@
   transform: translate3d(0, 0, 0);
   min-height: 100vh;
   background: white;
+  position: relative;
   z-index: 2;
 
   h1, h2, h3, h4, h5, h6 {
